2012-11-19  JJ Allaire <jj@rstudio.org>

        * src/AttributesParser.h: support for argument default values
        * src/AttributesParser.cpp: support for argument default values
        * src/Attributes.cpp: support for argument default values
        * man/exportAttribute.Rd: documentation updates
        * man/compileAttributes.Rd: documentation updates
        * man/sourceCpp.Rd: documentation updates
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: add documentation
        on changes to attributes in 0.10.1

2012-11-18  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: sourceCpp embedded R code; print warning if 
        no export attributes are found in source file
        * src/AttributesParser.h: sourceCpp embedded R code
        * src/AttributesParser.cpp: sourceCpp embedded R code; new scheme
        for mixing user and generated C++ headers
        * src/Attributes.cpp: sourceCpp embedded R code; include <Rcpp.h>
        above generated modules
        * man/sourceCpp.Rd: documentation updates
        * man/interfacesAttribute.Rd: documentation updates

2012-11-18  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/converter.h: allow CharacterVector::create( NA_STRING )
        * include/Rcpp/sugar/functions/mapply/mapply_2.h: more cases in mapply

2012-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-modules/Rcpp-modules.Rnw: Change free function name
	'range' to 'uniformRange' to protect it from getting clobbered by the
	new sugar function range.

2012-11-17  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap_end.h: have calls to wrap as late as
	possible so that they "see" all (potentially user defined) overloads
	of wrap.
        * include/Rcpp/internal/SEXP_Iterator.h: directly iterate over SEXP.
        const iterator for List and ExpressionVector

2012-11-16  Romain Francois <romain@r-enthusiasts.com>
